Change password ready

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -17,10 +17,23 @@
             android:id="@+id/tvNewPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Old password" />
+
+        <EditText
+            android:id="@+id/etOldPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+        <TextView
+            android:id="@+id/tvNewPassword2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="New password" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/etNewPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -31,5 +44,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Save new password" />
+
+        <Button
+            android:id="@+id/btnGoToSecondActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="RETURN" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
