--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -43,7 +43,7 @@
             android:ems="10"
             android:gravity="start|top"
             android:inputType="textMultiLine"
-            android:text="tajne info" />
+            android:text="" />
 
         <Button
             android:id="@+id/btnSaveNote"
